...
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relocationStipend" />

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/jobTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCompany"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/inputTitle" />

    <AutoCompleteTextView
        android:id="@+id/inputCity"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/inputCompany" />

    <AutoCompleteTextView
        android:id="@+id/inputState"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/state"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

    <EditText
        android:id="@+id/inputCostOfLiving"
        android:layout_width="164dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/costofLiving"
        app:layout_constraintTop_toBottomOf="@+id/inputState" />

    <EditText
        android:id="@+id/inputSalary"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/yearlySalary"
        app:layout_constraintTop_toBottomOf="@+id/inputCostOfLiving" />

    <EditText
        android:id="@+id/inputBonus"
        android:layout_width="163dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/retirementBenefits"
        app:layout_constraintTop_toBottomOf="@+id/inputSalary" />

    <EditText
        android:id="@+id/inputBenefits"
        android:layout_width="164dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/retirementBenefits"
        app:layout_constraintTop_toBottomOf="@+id/inputBonus" />

    <EditText
        android:id="@+id/inputStipend"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="32"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/relocationStipend"
        app:layout_constraintTop_toBottomOf="@+id/inputBenefits" />

    <EditText
        android:id="@+id/inputFund"
        android:layout_width="165dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
...
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="60dp"
        android:background="#e74c3c"
        android:text="Save"
...
        android:textColor="#ecf0f1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:background="#e74c3c"
...
        android:textColor="#ecf0f1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deleteJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:background="#e74c3c"
...
