<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BACK2"
        android:layout_width="180px"
        android:layout_height="150px"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="39dp"
        android:text="↩"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/CURRENT_JOB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelSettingsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="97dp"
        android:background="#e74c3c"
        android:text="CANCEL"
        android:textColor="#ecf0f1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="97dp"
        android:background="#e74c3c"
        android:text="SAVE"
        android:textColor="#ecf0f1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editSettingsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="14dp"
        android:background="#e74c3c"
        android:text="EDIT"
        android:textColor="#ecf0f1"
        app:layout_constraintBottom_toTopOf="@+id/resetSettingsButton"
        app:layout_constraintEnd_toStartOf="@+id/cancelSettingsButton"
        app:layout_constraintStart_toEndOf="@+id/saveSettingsButton" />

    <TextView
        android:id="@+id/jobSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:text="Job Settings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/salaryWeight"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="16dp"
        android:text="Salary Weight"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editSalaryWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bonusWeight"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="Bonus Weight"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editBonusWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryWeight" />

    <TextView
        android:id="@+id/benefitsWeight"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="36dp"
        android:text="Benefits Weight"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relocationWeight"
        app:layout_constraintEnd_toStartOf="@+id/editBenefitsWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bonusWeight" />

    <TextView
        android:id="@+id/relocationWeight"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        android:text="Relocation Stipend Weight"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editRelocationWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benefitsWeight" />

    <TextView
        android:id="@+id/fundWeight"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:width="100dp"
        android:text="Training Development Funds Weight"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editFundWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relocationWeight" />

    <EditText
        android:id="@+id/editSalaryWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="26dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/salaryWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBonusWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bonusWeight"
        app:layout_constraintTop_toBottomOf="@+id/editSalaryWeight" />

    <EditText
        android:id="@+id/editBenefitsWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/benefitsWeight"
        app:layout_constraintTop_toBottomOf="@+id/editBonusWeight" />

    <EditText
        android:id="@+id/editRelocationWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="26dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relocationWeight"
        app:layout_constraintTop_toBottomOf="@+id/editBenefitsWeight" />

    <EditText
        android:id="@+id/editFundWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="26dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fundWeight"
        app:layout_constraintTop_toBottomOf="@+id/editRelocationWeight" />

    <Button
        android:id="@+id/resetSettingsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="35dp"
        android:background="#e74c3c"
        android:text="RESET"
        android:textColor="#ecf0f1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>